--- a/data/styles.css
+++ b/data/styles.css
@@ -2,19 +2,23 @@
 
 :root {
   --cv-html-bg: #111;
-  --cv-section-bg-light: #f7eeee;
+  --cv-section-bg-light: #e7dddd;
   --cv-section-bg-dark: #313030;
+  --cv-section-dark-border: #7e7e7e;
 
   --cv-text-light:#e7e7e7;
   --cv-link-lime: #9fef17;
 
   --bs-font-sans-serif: syne, kanit;
   --bs-font-monospace: share tech mono;
+
+  --bs-border-color: #c7bbbb; 
 }
 
 /* EXTENDED BOOTSTRAP */
 
 .fs-1c { font-size: 4rem; }
+.fs-4c { font-size: 1.5rem; }
 
 .fsp-1 { letter-spacing: .5em; }
 .fsp-2 { letter-spacing: .25em; }
@@ -22,9 +26,17 @@
 .fsp-4 { letter-spacing: .0625em; }
 
 .m-6 { margin: 4rem; }
+
+.mt-n2 { margin-top: -.5rem; }
+.mt-n3 { margin-top: -1.0rem; }
+.mt-n4 { margin-top: -1.5rem; }
+.mt-n5 { margin-top: -2rem; }
+.mt-n6 { margin-top: -4rem; }
+.mt-n7 { margin-top: -5rem; }
+
 .pt-6 { padding-top: 4rem; }
 
-/* CUSTOM */
+/* CUSTOM GENERAL */
 
 html { background: var(--cv-html-bg); }
 body { background: var(--cv-section-bg-light); }
@@ -40,38 +52,169 @@ img { user-select: none; pointer-events: none; }
 
 .ts-bottom { text-shadow: 0 .25rem .5rem #0000007f; }
 
+/* HEADER */
+
+#brand-img {
+  position: absolute;
+  top: -.5em;
+  width: 6.25em;
+  height: 6.25em;
+  padding: 0;
+  border-radius: 50%;
+  box-shadow: -3px 4px 12px #00000070;
+}
+
+.header-tab-item {
+  text-align: center;
+  min-width: max-content;
+  color: #888;
+  width: 6.5em;
+}
+
+.header-tab-item:hover {
+  color: var(--cv-link-lime);
+  transition: .125s;
+}
+
+.header-tab-item.active {
+  margin-bottom: -4px;
+  border-radius: 4px;
+  color: var(--cv-text-light);
+  border-bottom: 4px solid var(--cv-section-dark-border);
+}
+
+/* GENERAL TABS */
+
 .section-light { background-color: var(--cv-section-bg-light); }
 .section-dark { background-color: var(--cv-section-bg-dark); }
 .section-dark { color: var(--cv-text-light); }
 .section-dark a { color: var(--cv-link-lime); }
+.section-border { margin: 3rem 0; }
 
-#brand-img {
+/* HOME TAB */
+
+#home-title-container {
+  margin-top: 2vw;
+  padding-top: 2vw;
+}
+
+#home-title {
   position: relative;
-  width: 24px;
-  height: 24px;
-  padding: 0;
-  margin: 0;
-  top: 2rem;
-  left: 2rem;
-  scale: 2.5;
-  border-radius: 50%;
-  box-shadow: -1px 2px 4px #00000050;
+  overflow: hidden;
+  height: 20vw;
+  max-height: 20vw;
+  border-radius: 2em;
+  box-shadow: 0 0 24px #ffffe0, 0 0 128px #00000040;
 }
 
-#brand-text {
-  margin: 0;
-  margin-bottom: -1rem;
-  margin-left: 5rem;
+#home-title-3D {
+  margin-top: -5%;
+  min-width: 110%;
+  min-height: 120%;
+  transform-style: preserve-3d;
+  transition-timing-function: ease-in;
+  transition: .05s;
 }
+
+#home-title-bg {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  inset:0px;
+  border-radius: 2em;
+  box-shadow: inset 0 0 64px #00000030;
+}
+
+#home-title-bg-simple {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  inset:0px;
+  border-radius: 2em;
+  box-shadow: inset 0 0 64px #00000030;
+}
+
+#home-title-bg img {
+  transform-style: preserve-3d;
+  transition: .025s;
+}
+
+#home-title-img-at {
+  position: absolute;
+  margin-top: -7vw;
+  margin-left: -7vw;
+  width: 14vw;
+  top: 15%;
+  left: 4%;
+  rotate: -12deg;
+}
+
+#home-title-img-s {
+  position: absolute;
+  margin-top: -4vw;
+  margin-left: -4vw;
+  width: 8vw;
+  top: 25%;
+  right: 10%;
+  rotate: 5deg;
+}
+
+#home-subtitle {
+  margin: .3em 0;
+  font-size: 4em;
+  letter-spacing: .25em;
+}
+
+/* FOOTER */
 
 #page-footer a { font-weight: 600; }
 
-#home-title-container {
-  height: 30vw;
-  background: 
-    radial-gradient(#726d78 20%, #00000040 78%, #00000000 100%),
-    linear-gradient(340deg, #95d8c4 0%, #00000000 60%), 
-    linear-gradient(20deg, #b388ef 0%, #00000000 60%), 
-    linear-gradient(250deg, #efefef 0%, #00000000 60%), 
-    linear-gradient(160deg, #fffc9b 0%, #00000000 60%);
+/* REACTIVE THINGS */
+
+@media screen and (max-width: 150em) {
+  .section-border { margin: 2vw 0; }
+  #home-subtitle { margin: .5vw 0; font-size: 2.7vw; }
+}
+
+/* DESKTOP */
+@media screen and (min-width: 1200px) {
+  .show-until-xl { display: none !important; }
+}
+
+@media screen and (max-width: 1200px) { 
+  .show-over-xl { display: none !important; } 
+}
+
+/* TABLET - PHONE LANDSCAPE */
+@media screen and (min-width: 992px) {
+  .show-until-lg { display: none !important; }
+}
+
+@media screen and (max-width: 992px) { 
+  .show-over-lg { display: none !important; } 
+  .fs-1c { font-size: 3rem; }
+  .fs-4c { font-size: 1.25rem; }
+  #home-title { height: 25vw; max-height: 25vw; }
+  #home-title-img-at { left: 10%; }
+  #home-title-img-s { right: 15%; }
+}
+
+/* PHONE PORTRAIT */
+@media screen and (min-width: 768px) { 
+  .show-until-md { display: none !important; }
+}
+
+@media screen and (max-width: 768px) { 
+  .show-over-md { display: none !important; } 
+  .fs-1c { font-size: 2.5rem; }
+  .fs-4c { font-size: .75rem; }
+  #home-title { height: 30vw; max-height: 30vw; }
+  #home-title-img-at { top: 27%; left: 7%; }
+  #home-title-img-s { top: 20%; right: 10%; }
+}
+
+/* BELOW PHONE */
+@media screen and (min-width: 577px) { 
+  .show-until-sm { display: none !important; }
 }
