--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2,12 +2,14 @@
 
 :root {
   --cv-html-bg: #111;
-  --cv-section-bg-light: #e7dddd;
+  --cv-section-bg-light: #f0e4e4;
+  --cv-section-bg-medium: #9ca6b3;
   --cv-section-bg-dark: #313030;
   --cv-section-dark-border: #7e7e7e;
 
   --cv-text-light:#e7e7e7;
   --cv-link-lime: #9fef17;
+  --cv-link-limedark: #78b313;
 
   --bs-font-sans-serif: syne, kanit;
   --bs-font-monospace: share tech mono;
@@ -17,13 +19,17 @@
 
 /* EXTENDED BOOTSTRAP */
 
-.fs-1c { font-size: 4rem; }
-.fs-4c { font-size: 1.5rem; }
+.flex-column-rev-until-md-row { flex-direction: column-reverse; }
 
-.fsp-1 { letter-spacing: .5em; }
-.fsp-2 { letter-spacing: .25em; }
-.fsp-3 { letter-spacing: .125em; }
-.fsp-4 { letter-spacing: .0625em; }
+.fs-1c { font-size: calc(.25rem + 4vw); }
+.fs-tab { font-size: calc(.5rem + 1.1vw); }
+.fs-4c { font-size: calc(.5rem + 1.2vw); }
+.fs-5c { font-size: calc(.3rem + 1vw); }
+
+.fsp-1 { letter-spacing: .5rem; }
+.fsp-2 { letter-spacing: .25rem; }
+.fsp-3 { letter-spacing: .125rem; }
+.fsp-4 { letter-spacing: .0625rem; }
 
 .m-6 { margin: 4rem; }
 
@@ -56,10 +62,8 @@ img { user-select: none; pointer-events: none; }
 
 #brand-img {
   position: absolute;
-  top: -25%;
-  width: 3.25em;
-  height: 3.25em;
-  padding: 0;
+  bottom: calc(2.4em - 8vw);
+  width: calc(.4em + 13vw);
   border-radius: 50%;
   box-shadow: -3px 4px 12px #00000070;
 }
@@ -72,6 +76,9 @@ img { user-select: none; pointer-events: none; }
 }
 
 .header-tab-item:hover {
+  margin-bottom: -4px;
+  border-radius: 4px;
+  border-bottom: 4px solid var(--cv-link-limedark);
   color: var(--cv-link-lime);
   transition: .125s;
 }
@@ -83,20 +90,50 @@ img { user-select: none; pointer-events: none; }
   border-bottom: 4px solid var(--cv-section-dark-border);
 }
 
+.header-socials-item {
+  margin: 0px;
+  padding: .25em .5em;
+  transition: .125s;
+}
+
+.header-socials-item img { width: 24px; }
+
+.header-socials-item:hover {
+  scale: 1.25;
+  transition: .0625s;
+}
+
+.header-socials-item:active {
+  scale: .625;
+  transition: .025s;
+}
+
 /* GENERAL TABS */
 
 .section-light { background-color: var(--cv-section-bg-light); }
+.section-medium { background-color: var(--cv-section-bg-medium); }
 .section-dark { background-color: var(--cv-section-bg-dark); }
 .section-dark { color: var(--cv-text-light); }
 .section-dark a { color: var(--cv-link-lime); }
-.section-border { margin: 3rem 0; }
+
+.section-border-bottom { margin-top: 1.5rem; margin-bottom: 3rem; }
+.section-border-top { margin-top: 3rem; margin-bottom: 1.5rem; }
+
+.wordspanner-container {
+  height: 24em;
+}
+
+.wordspanner {
+  position: absolute;
+  margin-top:-20%;
+  margin-left:-5%;
+  top:0;
+  left:0;
+  width:110%;
+  opacity:0.2;
+}
 
 /* HOME TAB */
-
-#home-title-container {
-  margin-top: 2vw;
-  padding-top: 2vw;
-}
 
 #home-title {
   position: relative;
@@ -161,7 +198,6 @@ img { user-select: none; pointer-events: none; }
 }
 
 #home-subtitle {
-  margin: .3em 0;
   font-size: 4em;
   letter-spacing: .25em;
 }
@@ -169,6 +205,23 @@ img { user-select: none; pointer-events: none; }
 /* FOOTER */
 
 #page-footer a { font-weight: 600; }
+
+.footer-tab-item {
+  text-align: right;
+  min-width: max-content;
+  color: #888;
+  width: 6.5em;
+  height: 1.75em;
+}
+
+.footer-tab-item:hover {
+  color: var(--cv-link-lime);
+  transition: .125s;
+}
+
+.footer-tab-item.active {
+  color: var(--cv-text-light);
+}
 
 /* REACTIVE THINGS */
 
@@ -179,6 +232,7 @@ img { user-select: none; pointer-events: none; }
 
 /* DESKTOP */
 @media screen and (min-width: 1200px) {
+  .fs-tab { font-size: 1.5rem; }
   .show-until-xl { display: none !important; }
 }
 
@@ -188,13 +242,14 @@ img { user-select: none; pointer-events: none; }
 
 /* TABLET - PHONE LANDSCAPE */
 @media screen and (min-width: 992px) {
+  .fs-1c { font-size: 4rem; }
+  .fs-4c { font-size: 1.5rem; }
+  .fs-5c { font-size: 1.25rem; }
   .show-until-lg { display: none !important; }
 }
 
 @media screen and (max-width: 992px) { 
   .show-over-lg { display: none !important; } 
-  .fs-1c { font-size: 3rem; }
-  .fs-4c { font-size: 1.25rem; }
   #home-title { height: 25vw; max-height: 25vw; }
   #home-title-img-at { left: 10%; }
   #home-title-img-s { right: 15%; }
@@ -202,13 +257,13 @@ img { user-select: none; pointer-events: none; }
 
 /* PHONE PORTRAIT */
 @media screen and (min-width: 768px) { 
+  .flex-column-rev-until-md-row { flex-direction: row; }
   .show-until-md { display: none !important; }
 }
 
 @media screen and (max-width: 768px) { 
+  .header-socials-item img { width: 32px; }
   .show-over-md { display: none !important; } 
-  .fs-1c { font-size: 2.5rem; }
-  .fs-4c { font-size: .75rem; }
   #home-title { height: 30vw; max-height: 30vw; }
   #home-title-img-at { top: 27%; left: 7%; }
   #home-title-img-s { top: 20%; right: 10%; }
