--- a/_resources/styles.css
+++ b/_resources/styles.css
@@ -17,6 +17,19 @@
   --bs-border-color: #c7bbbb; 
 }
 
+/* CUSTOM GENERAL */
+
+html { background: var(--cv-html-bg); }
+body { background: var(--cv-section-bg-light); }
+
+a { text-decoration: none; }
+
+.hidden { display: none !important; }
+.no-select { user-select: none; }
+.no-pointer { pointer-events: none; }
+
+img { user-select: none; pointer-events: none; }
+
 /* EXTENDED BOOTSTRAP */
 
 .flex-column-rev-until-md-row { flex-direction: column-reverse; }
@@ -41,20 +54,6 @@
 .mt-n7 { margin-top: -5rem; }
 
 .pt-6 { padding-top: 4rem; }
-
-/* CUSTOM GENERAL */
-
-html { background: var(--cv-html-bg); }
-body { background: var(--cv-section-bg-light); }
-
-a { text-decoration: none; }
-
-img { user-select: none; pointer-events: none; }
-
-.no-select { user-select: none; }
-.no-pointer { pointer-events: none; }
-
-.mono { font-family: var(--bs-font-monospace); }
 
 .ts-bottom { text-shadow: 0 .25rem .5rem #0000007f; }
 
@@ -133,74 +132,6 @@ img { user-select: none; pointer-events: none; }
   opacity:0.2;
 }
 
-/* HOME TAB */
-
-#home-title {
-  position: relative;
-  overflow: hidden;
-  height: 20vw;
-  max-height: 20vw;
-  border-radius: 2em;
-  box-shadow: 0 0 24px #ffffe0, 0 0 128px #00000040;
-}
-
-#home-title-3D {
-  margin-top: -5%;
-  min-width: 110%;
-  min-height: 120%;
-  transform-style: preserve-3d;
-  transition-timing-function: ease-in;
-  transition: .05s;
-}
-
-#home-title-bg {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  inset:0px;
-  border-radius: 2em;
-  box-shadow: inset 0 0 64px #00000030;
-}
-
-#home-title-bg-simple {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: absolute;
-  inset:0px;
-  border-radius: 2em;
-  box-shadow: inset 0 0 64px #00000030;
-}
-
-#home-title-bg img {
-  transform-style: preserve-3d;
-  transition: .025s;
-}
-
-#home-title-img-at {
-  position: absolute;
-  margin-top: -7vw;
-  margin-left: -7vw;
-  width: 14vw;
-  top: 15%;
-  left: 4%;
-  rotate: -12deg;
-}
-
-#home-title-img-s {
-  position: absolute;
-  margin-top: -4vw;
-  margin-left: -4vw;
-  width: 8vw;
-  top: 25%;
-  right: 10%;
-  rotate: 5deg;
-}
-
-#home-subtitle {
-  font-size: 4em;
-  letter-spacing: .25em;
-}
 
 /* FOOTER */
 
@@ -227,7 +158,6 @@ img { user-select: none; pointer-events: none; }
 
 @media screen and (max-width: 150em) {
   .section-border { margin: 2vw 0; }
-  #home-subtitle { margin: .5vw 0; font-size: 2.7vw; }
 }
 
 /* DESKTOP */
@@ -250,9 +180,6 @@ img { user-select: none; pointer-events: none; }
 
 @media screen and (max-width: 992px) { 
   .show-over-lg { display: none !important; } 
-  #home-title { height: 25vw; max-height: 25vw; }
-  #home-title-img-at { left: 10%; }
-  #home-title-img-s { right: 15%; }
 }
 
 /* PHONE PORTRAIT */
@@ -263,10 +190,7 @@ img { user-select: none; pointer-events: none; }
 
 @media screen and (max-width: 768px) { 
   .header-socials-item img { width: 32px; }
-  .show-over-md { display: none !important; } 
-  #home-title { height: 30vw; max-height: 30vw; }
-  #home-title-img-at { top: 27%; left: 7%; }
-  #home-title-img-s { top: 20%; right: 10%; }
+  .show-over-md { display: none !important; }
 }
 
 /* BELOW PHONE */
